feat: Added Head Content

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,1 +1,13 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <title>BC/AL Qualitätsregeln</title>
+    <link rel="stylesheet" href="AL-Rules-Website\CSS\style.css" />
+    <meta charset="UTF-8" />
+    <meta
+      name="keywords"
+      content="AL, Business Central, Programmieren, Qualität, Netik"
+    />
+    />
+  </head>
+</html>
