feat: added intro and "Regeln" section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,12 +2,42 @@
 <html>
   <head>
     <title>BC/AL Qualitätsregeln</title>
-    <link rel="stylesheet" href="AL-Rules-Website\CSS\style.css" />
+    <link rel="stylesheet" href="..\CSS\style.css" />
     <meta charset="UTF-8" />
     <meta
       name="keywords"
       content="AL, Business Central, Programmieren, Qualität, Netik"
     />
-    />
   </head>
+  <body>
+    <header class="header">
+      <a href="#start" class="Logo">
+        <img src="..\img\NetikLogoTransparent.png" alt="Netik" height="100vh"
+      /></a>
+
+      <nav class="navbar">
+        <a href="#start">Start</a>
+        <a href="#structure">Projektstruktur</a>
+        <a href="#code">Code</a>
+        <a href="#devops">DevOps und PRs</a>
+      </nav>
+    </header>
+    <section class="Intro" id="start">
+      <div class="Intro-Content">
+        <h2>AL-/BC-Regeln zur Qualitätssicherung im Entwicklungsbereich</h2>
+        <p>
+          AL und BC-Programmierregeln sind grundlegende Richtlinien, die uns
+          helfen Kunden sauberen, wartbaren und vor allem effizienten Code zu
+          bieten. Durch sie werden Best Practices wie Lesbarkeit und Modularität
+          gefördert.
+        </p>
+      </div>
+    </section>
+    <section class="RulesGrey" id="structure">
+      <div class="Rules-Content">
+        <h1>Regeln</h1>
+        <p>Hier findet ihr die wichtigsten Regeln!</p>
+      </div>
+    </section>
+  </body>
 </html>
