feat: added placeholder for rules

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -33,10 +33,46 @@
         </p>
       </div>
     </section>
-    <section class="RulesGrey" id="structure">
-      <div class="Rules-Content">
+    <section class="RulesGrey">
+      <div class="Rules-Content-Header">
         <h1>Regeln</h1>
         <p>Hier findet ihr die wichtigsten Regeln!</p>
+      </div>
+    </section>
+    <section class="RulesWhite" id="structure">
+      <div class="Rules-Content">
+        <h2>Projektstruktur</h2>
+        <div class="Rules-List">
+          <ul>Bacon ipsum dolor amet ball tip dolore tongue shoulder qui. Lorem
+          short ribs chicken, ipsum occaecat est pariatur pork belly ut sint id
+          dolore turkey. Irure pork loin tail do capicola dolore officia
+          proident tri-tip hamburger cupim porchetta aliqua excepteur. Laboris
+          non shankle, pork loin fatback beef tri-tip sunt drumstick jowl.
+        </ul>
+      </div>
+    </section>
+    <section class="RulesGrey" id="Code">
+      <div class="Rules-Content">
+        <h2>Code</h2>
+        <p>
+          Eu incididunt pariatur irure turkey chuck nulla prosciutto anim
+          consectetur enim. Lorem burgdoggen minim pig porchetta. Non brisket
+          boudin jerky. Do flank non rump, tongue adipisicing sausage. Ea tempor
+          bresaola ham hock chislic burgdoggen id reprehenderit in pig ball tip
+          est deserunt short ribs chuck.
+        </p>
+      </div>
+    </section>
+    <section class="RulesWhite" id="devops">
+      <div class="Rules-Content">
+        <h2>DevOps und PRs</h2>
+        <p>
+          Pork chop venison tail cow irure non. Leberkas boudin ham hock jowl
+          laborum labore corned beef velit rump spare ribs tongue eiusmod
+          picanha. Short loin duis culpa jerky tri-tip. Andouille excepteur
+          t-bone leberkas, spare ribs ground round ball tip sunt magna jerky ham
+          hock. Dolore dolor adipisicing veniam jerky.
+        </p>
       </div>
     </section>
   </body>
