fix: changed p to ul

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -54,25 +54,28 @@
     <section class="RulesGrey" id="Code">
       <div class="Rules-Content">
         <h2>Code</h2>
-        <p>
+        <div class="Rules-List"><ul>
           Eu incididunt pariatur irure turkey chuck nulla prosciutto anim
           consectetur enim. Lorem burgdoggen minim pig porchetta. Non brisket
           boudin jerky. Do flank non rump, tongue adipisicing sausage. Ea tempor
           bresaola ham hock chislic burgdoggen id reprehenderit in pig ball tip
           est deserunt short ribs chuck.
-        </p>
+          </ul>
+        </div>
       </div>
     </section>
     <section class="RulesWhite" id="devops">
       <div class="Rules-Content">
         <h2>DevOps und PRs</h2>
-        <p>
+        <div class="Rules-List">
+          <ul>
           Pork chop venison tail cow irure non. Leberkas boudin ham hock jowl
           laborum labore corned beef velit rump spare ribs tongue eiusmod
           picanha. Short loin duis culpa jerky tri-tip. Andouille excepteur
           t-bone leberkas, spare ribs ground round ball tip sunt magna jerky ham
           hock. Dolore dolor adipisicing veniam jerky.
-        </p>
+        </ul>
+        </div>
       </div>
     </section>
   </body>
