feat: added footer

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -78,5 +78,25 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <li>
+      <a href="#Start">Start</a>
+    </li>
+    <li>
+      <a href="#strucutre">Projektstruktur</a>
+    </li>
+    <li>
+      <a href="#code">Code</a>
+    </li>
+    <li>
+      <a href="#devops">DevOps und PRs</a>
+    </li>
+    <li>
+      <a href="#">Datenschutzerklärung</a>
+    </li>
+    <li>
+      <a href="#">Impressum</a>
+    </li>
+    </footer>
   </body>
 </html>
