fix: added links to footer

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -79,6 +79,7 @@
       </div>
     </section>
     <footer class="footer">
+    <ul class="list">
       <li>
       <a href="#Start">Start</a>
     </li>
@@ -92,11 +93,13 @@
       <a href="#devops">DevOps und PRs</a>
     </li>
     <li>
-      <a href="#">Datenschutzerklärung</a>
+        <a href="https://www.netik.de/unternehmen/datenschutz/">Datenschutzerklärung</a>
     </li>
     <li>
-      <a href="#">Impressum</a>
+        <a href="https://www.netik.de/Impressum/">Impressum</a>
     </li>
+    </ul>
     </footer>
   </body>
+
 </html>
