feat: added link to header / added keywords in head

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>BC/AL Qualitätsregeln</title>
     <link rel="stylesheet" href="..\CSS\style.css" />
     <meta charset="UTF-8" />
-    <meta
-      name="keywords"
-      content="AL, Business Central, Programmieren, Qualität, Netik"
-    />
+  <meta name="keywords" content="AL, Business Central, Programmieren, Qualität, Netik" />
   </head>
+
   <body>
     <header class="header">
-      <a href="#start" class="Logo">
-        <img src="..\img\NetikLogoTransparent.png" alt="Netik" height="100vh"
-      /></a>
+    <a href="https://www.netik.de/" class="Logo">
+      <img src="..\img\NetikLogoTransparent.png" alt="Netik" height="100vh" /></a>
 
       <nav class="navbar">
         <a href="#start">Start</a>
