--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,103 +1,120 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <title>BC/AL Qualitätsregeln</title>
-    <link rel="stylesheet" href="..\CSS\style.css" />
-    <meta charset="UTF-8" />
+<head>
+  <title>BC/AL Qualitätsregeln</title>
+  <link rel="stylesheet" href="..\CSS\style.css" />
+  <meta charset="UTF-8" />
   <meta name="keywords" content="AL, Business Central, Programmieren, Qualität, Netik" />
-  </head>
+</head>
 
-  <body>
-    <header class="header">
+<body>
+  <header class="header">
     <a href="https://www.netik.de/" class="Logo">
       <img src="..\img\NetikLogoTransparent.png" alt="Netik" height="100vh" /></a>
 
-      <nav class="navbar">
-        <a href="#start">Start</a>
-        <a href="#structure">Projektstruktur</a>
-        <a href="#code">Code</a>
-        <a href="#devops">DevOps und PRs</a>
-      </nav>
-    </header>
-    <section class="Intro" id="start">
-      <div class="Intro-Content">
-        <h2>AL-/BC-Regeln zur Qualitätssicherung im Entwicklungsbereich</h2>
-        <p>
-          AL und BC-Programmierregeln sind grundlegende Richtlinien, die uns
-          helfen Kunden sauberen, wartbaren und vor allem effizienten Code zu
-          bieten. Durch sie werden Best Practices wie Lesbarkeit und Modularität
-          gefördert.
-        </p>
-      </div>
-    </section>
-    <section class="RulesGrey">
-      <div class="Rules-Content-Header">
-        <h1>Regeln</h1>
-        <p>Hier findet ihr die wichtigsten Regeln!</p>
-      </div>
-    </section>
-    <section class="RulesWhite" id="structure">
-      <div class="Rules-Content">
-        <h2>Projektstruktur</h2>
-        <div class="Rules-List">
-          <ul>Bacon ipsum dolor amet ball tip dolore tongue shoulder qui. Lorem
-          short ribs chicken, ipsum occaecat est pariatur pork belly ut sint id
-          dolore turkey. Irure pork loin tail do capicola dolore officia
-          proident tri-tip hamburger cupim porchetta aliqua excepteur. Laboris
-          non shankle, pork loin fatback beef tri-tip sunt drumstick jowl.
+    <nav class="navbar">
+      <a href="#start">Start</a>
+      <a href="#structure">Projektstruktur</a>
+      <a href="#code">Code</a>
+      <a href="#devops">DevOps und PRs</a>
+    </nav>
+  </header>
+  <section class="Intro" id="start">
+    <div class="Intro-Content">
+      <h2>AL-/BC-Regeln zur Qualitätssicherung im Entwicklungsbereich</h2>
+      <p>
+        AL und BC-Programmierregeln sind grundlegende Richtlinien, die uns
+        helfen Kunden sauberen, wartbaren und vor allem effizienten Code zu
+        bieten. Durch sie werden Best Practices wie Lesbarkeit und Modularität
+        gefördert.
+      </p>
+    </div>
+  </section>
+  <section class="RulesGrey">
+    <div class="Rules-Content-Header">
+      <h1>Regeln</h1>
+      <p>Hier findet ihr die wichtigsten Regeln!</p>
+    </div>
+  </section>
+  <section class="RulesWhite" id="structure">
+    <div class="Rules-Content">
+      <h2>Projektstruktur</h2>
+      <div class="Rules-List">
+        <ul>
+          <li>
+            Quellcode gehört in den SRC-Ordner
+          </li>
+          <li>
+            Translation Files müssen angelegt werden
+          </li>
         </ul>
       </div>
-    </section>
-    <section class="RulesGrey" id="Code">
-      <div class="Rules-Content">
-        <h2>Code</h2>
-        <div class="Rules-List"><ul>
-          Eu incididunt pariatur irure turkey chuck nulla prosciutto anim
-          consectetur enim. Lorem burgdoggen minim pig porchetta. Non brisket
-          boudin jerky. Do flank non rump, tongue adipisicing sausage. Ea tempor
-          bresaola ham hock chislic burgdoggen id reprehenderit in pig ball tip
-          est deserunt short ribs chuck.
-          </ul>
-        </div>
-      </div>
-    </section>
-    <section class="RulesWhite" id="devops">
-      <div class="Rules-Content">
-        <h2>DevOps und PRs</h2>
-        <div class="Rules-List">
-          <ul>
-          Pork chop venison tail cow irure non. Leberkas boudin ham hock jowl
-          laborum labore corned beef velit rump spare ribs tongue eiusmod
-          picanha. Short loin duis culpa jerky tri-tip. Andouille excepteur
-          t-bone leberkas, spare ribs ground round ball tip sunt magna jerky ham
-          hock. Dolore dolor adipisicing veniam jerky.
+  </section>
+  <section class="RulesGrey" id="Code">
+    <div class="Rules-Content">
+      <h2>Code</h2>
+      <div class="Rules-List">
+        <ul>
+          <li>
+            Tests für alle möglichen Ergebnisse
+          </li>
+          <li>
+            Ein Leerzeichen nach jedem Namespace
+          </li>
+          <li>
+            Globale Varibalen werden mit einem _ gekennzeichnet
+          </li>
+          <li>
+            Keine Leerzeichen in Varibalen, Objektnamen und Methoden
+          </li>
+          <li>
+            VAR | Using wird alphabetisch sortiert
+          </li>
+          <li>
+            Regeln aus den AL-Guidelines welche <a href="">hier</a> gefunden werden können
+          </li>
         </ul>
-        </div>
       </div>
-    </section>
-    <footer class="footer">
+    </div>
+  </section>
+  <section class="RulesWhite" id="devops">
+    <div class="Rules-Content">
+      <h2>DevOps und PRs</h2>
+      <div class="Rules-List">
+        <ul>
+          <li>
+            Es müssen Code Reviews gemacht werden
+          </li>
+          <li>
+            TestFiles als Anhang beifügen oder einen Link welcher zu den TestFiles führt
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
     <ul class="list">
       <li>
-      <a href="#Start">Start</a>
-    </li>
-    <li>
-      <a href="#strucutre">Projektstruktur</a>
-    </li>
-    <li>
-      <a href="#code">Code</a>
-    </li>
-    <li>
-      <a href="#devops">DevOps und PRs</a>
-    </li>
-    <li>
+        <a href="#Start">Start</a>
+      </li>
+      <li>
+        <a href="#strucutre">Projektstruktur</a>
+      </li>
+      <li>
+        <a href="#code">Code</a>
+      </li>
+      <li>
+        <a href="#devops">DevOps und PRs</a>
+      </li>
+      <li>
         <a href="https://www.netik.de/unternehmen/datenschutz/">Datenschutzerklärung</a>
-    </li>
-    <li>
+      </li>
+      <li>
         <a href="https://www.netik.de/Impressum/">Impressum</a>
-    </li>
+      </li>
     </ul>
-    </footer>
-  </body>
+  </footer>
+</body>
 
 </html>
