fix: improved rule

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -46,7 +46,7 @@
             Quellcode gehört in den SRC-Ordner
           </li>
           <li>
-            Translation Files müssen angelegt werden
+            Für Translation Files wird ein dedizierter Ordner angelegt
           </li>
         </ul>
       </div>
