feat: added content to outro

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -93,6 +93,16 @@
       </div>
     </div>
   </section>
+    <section class="Outro">
+      <div class="Outro-Content">
+        <h2>Updates</h2>
+        <p>Jeder kann sich freiwillig bei dieser Webpage beteiligen. Dazu muss derjenige nur auf das <a
+            href="https://github.com/fhintze-netik/AL-Rules-Website">GitHub
+            Repo</a> navigieren, das Repo pullen, anschließend so wie in der ReadMe einen Eintrag einrichten und einen
+          Pull Request erstellen. Danach wird der PR sobald wie möglich bearbeitet und je nach Qualität gehandhabt.</p>
+      </div>
+    </section>
+  </div>
   <footer class="footer">
     <ul class="list">
       <li>
