feat: implemented sections

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,6 +20,7 @@
       <a href="#devops">DevOps und PRs</a>
     </nav>
   </header>
+  <div class="sections">
   <section class="Intro" id="start">
     <div class="Intro-Content">
       <h2>AL-/BC-Regeln zur Qualitätssicherung im Entwicklungsbereich</h2>
