feat: added fav icon

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="..\CSS\style.css" />
   <meta charset="UTF-8" />
   <meta name="keywords" content="AL, Business Central, Programmieren, Qualität, Netik" />
+  <link rel="icon" href="..\img\fav.ico" type="image/x-icon">
 </head>
 
 <body>
