--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,6 +7,11 @@
   <meta charset="UTF-8" />
   <meta name="keywords" content="AL, Business Central, Programmieren, Qualität, Netik" />
   <link rel="icon" href="..\img\fav.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
